@@ -69,7 +69,7 @@ setMethod("drm", signature(x="sep.pars"), function(x, theta, dimensions, D, inco
 		theta <- as.matrix(theta)
 		colnames(theta) <- "theta1"
 	}else if (dimensions>1) {
-		if (is.numeric(theta)) {
+		if (is.vector(theta)) {
 			tmp <- vector("list", dimensions)
 			for (i in 1:dimensions) {
 				tmp[[i]] <- theta
