@@ -76,7 +76,7 @@ setMethod("mixed", signature(x="sep.pars"), function(x, cat, poly.mod, theta, di
 		theta <- as.matrix(theta)
 		colnames(theta) <- "theta1"
 	}else if (dimensions>1) {
-		if (is.numeric(theta)) {
+		if (is.vector(theta)) {
 			tmp <- vector("list", dimensions)
 			for (i in 1:dimensions) {
 				tmp[[i]] <- theta
