@@ -4,11 +4,11 @@ citEntry(entry = "Manual",
          title        = "plink: {IRT} separate calibration linking methods",
          author       = "Jonathan P. Weeks",
          year         = "2009",
-         note         = "R package version 1.1-0",
+         note         = "R package version 1.1-1",
          url          = "http://cran.r-project.org/web/packages/plink/index.html",
          
          textVersion  = paste("Jonathan P. Weeks (2009).",
                         "plink: IRT separate calibration linking methods.",
-                        "(R package version 1.1-0).",
+                        "(R package version 1.1-1).",
                         "URL http://cran.r-project.org/web/packages/plink/index.html")
 )
